@@ -34,7 +34,7 @@ void mb_get_col(const char *buf,int pos,int *col,int len)
    *col=0;
    for(int i=0; i<pos; )
    {
-      mblen(0,0);
+      mbtowc(0,0,0);
       wchar_t wc;
       int ch_len=mbtowc(&wc,buf+i,len-i);
       if(ch_len<1)
@@ -53,7 +53,7 @@ void mb_char_left(const char *buf,int *pos,int *col,int len)
    *col=0;
    for(int i=0; i<*pos; )
    {
-      mblen(0,0);
+      mbtowc(0,0,0);
       wchar_t wc;
       int ch_len=mbtowc(&wc,buf+i,len-i);
       if(ch_len<1)
@@ -75,7 +75,7 @@ void mb_char_right(const char *buf,int *pos,int *col,int len)
 {
 #if USE_MULTIBYTE_CHARS
    wchar_t wc;
-   mblen(0,0);
+   mbtowc(0,0,0);
    int ch_len=mbtowc(&wc,buf+*pos,len-*pos);
    if(ch_len<1)
       ch_len=1;
@@ -204,6 +204,7 @@ int   getstring(const char *pr,char *buf,int maxlen,History* history,int *len,
          case(DELETE_CHAR):
             if(pos==*len)
                break;
+	    mblen(0,0);
 	    ch_len=mblen(buf+pos,*len-pos);
 	    if(ch_len<1)
 	       ch_len=1;
